[package]
name = "sana-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
actix-web = "4"
itertools = "0.13"
serde = "1"
serde_json = "1"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = [
  "std",
  "ansi",
  "json",
  "fmt",
  "registry",
] }
derive_more = "0.99"
